# azarrot

./: .buildinfo  .dockerignore  .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  quick-start.html  search.html  searchindex.js  tox.ini
.doctrees/: environment.pickle  index.doctree  quick-start.doctree
.github/workflows/: docker-image.yml  sphinx.yml
_sources/: quick-start.rst.txt
docker/: Dockerfile  docker-compose.yml  server.yml
docs/source/: conf.py  index.rst  quick-start.rst
examples/: BAAI-bge-m3-ov-int8.model.yml  CodeQwen1.5-7B-ipex-llm.model.yml  InternVL2-8B-ipex-llm.model.yml  Nxcode-CQ-7B-orpo-ipex-llm.model.yml  Nxcode-CQ-7B-orpo-ov-int4.model.yml  Qwen2-7B-Instruct-ipex-llm.model.yml  deepseek-coder-1.3b-instruct-ov-int4.model.yml  server.yml
src/azarrot/: alembic.ini  common_data.py  config.py  database_schemas.py  file_store.py  server.py
src/azarrot/alembic/: env.py
src/azarrot/alembic/versions/: fd27ad131911_create_file_store_tables.py
src/azarrot/backends/: backend_base.py  common.py  ipex_llm_backend.py  openvino.py  openvino_backend.py
src/azarrot/backends/ipex_llm_support/: internvl2_processor.py  internvl2_tools.py
src/azarrot/frontends/: backend_pipe.py  management.py  openai_frontend.py
src/azarrot/frontends/openai_support/: openai_data.py  openai_files.py
src/azarrot/models/: __init__.py  chat_templates.py  model_manager.py  model_quirks.py
src/azarrot/models/supports/: qwen2_chat_support.py
src/azarrot/tools/: tool.py  tool_adder.py  tool_manager.py
src/azarrot/utils/: merged_file.py
tests/integration/: utils.py
tests/integration/ipex_llm/: conftest.py  test_internvl2.py  test_qwen2.py
tests/integration/openai_other_apis/: conftest.py  test_file_api.py  test_files_api.py  test_uploads_api.py
tests/integration/openvino/: conftest.py  test_bge_m3.py  test_internvl2.py  test_qwen2.py
tests/models/supports/: test_qwen2_chat_support.py
tests/unit/: __init__.py
tests/unit/utils/: test_merged_file.py
